--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,6 +14,7 @@
     "react-hamburger-button": "0.0.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-scrollspy": "^3.4.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
