--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-scrollspy": "^3.4.3",
+    "uniqid": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
